Use ImmutableSet in order to serialize properly