@@ -1,12 +1,11 @@
 package org.opentripplanner.routing.edgetype;
 
+import com.google.common.collect.ImmutableSet;
 import java.io.IOException;
 import java.io.ObjectOutputStream;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 import javax.annotation.Nonnull;
 import org.locationtech.jts.geom.Coordinate;
@@ -56,7 +55,7 @@ public class StreetEdge extends Edge implements BikeWalkableEdge, Cloneable, Car
      * Since the majority of StreetEdge instances don't have any turn restrictions,
      * we create a global instance of an empty set of turn restrictions.
      */
-    private static final Set<TurnRestriction> NO_TURN_RESTRICTIONS = Set.of();
+    private static final ImmutableSet<TurnRestriction> NO_TURN_RESTRICTIONS = ImmutableSet.of();
 
     /* TODO combine these with OSM highway= flags? */
     public static final int CLASS_STREET = 3;
@@ -140,7 +139,7 @@ public class StreetEdge extends Edge implements BikeWalkableEdge, Cloneable, Car
      * That would mean that every StreetEdge has its own empty instance which would increase
      * memory significantly.
      */
-    private Set<TurnRestriction> turnRestrictions = NO_TURN_RESTRICTIONS;
+    private ImmutableSet<TurnRestriction> turnRestrictions = NO_TURN_RESTRICTIONS;
 
     public StreetEdge(StreetVertex v1, StreetVertex v2, LineString geometry,
                       I18NString name, double length,
@@ -951,7 +950,7 @@ public class StreetEdge extends Edge implements BikeWalkableEdge, Cloneable, Car
             // we make the turn restrictions unmodifiable after a copy-on-write modification
             var temp = new ArrayList<>(turnRestrictions);
             temp.add(turnRestriction);
-            turnRestrictions = Set.copyOf(temp);
+            turnRestrictions = ImmutableSet.copyOf(temp);
         }
     }
 
@@ -970,9 +969,9 @@ public class StreetEdge extends Edge implements BikeWalkableEdge, Cloneable, Car
                 else {
                     // in order to guarantee fast access without extra allocations
                     // we make the turn restrictions unmodifiable after a copy-on-write modification
-                    var withRemoved = new HashSet<>(turnRestrictions);
+                    var withRemoved = new ArrayList<>(turnRestrictions);
                     withRemoved.remove(turnRestriction);
-                    turnRestrictions = Collections.unmodifiableSet(withRemoved);
+                    turnRestrictions = ImmutableSet.copyOf(withRemoved);
                 }
             }
         }
@@ -986,7 +985,7 @@ public class StreetEdge extends Edge implements BikeWalkableEdge, Cloneable, Car
      *
      */
     @Nonnull
-    public Set<TurnRestriction> getTurnRestrictions() {
+    public ImmutableSet<TurnRestriction> getTurnRestrictions() {
         // this can be safely returned as it's unmodifiable
         return turnRestrictions;
     }
